fix for submenus on mobile

--- a/style.scss
+++ b/style.scss
@@ -3249,6 +3249,8 @@ h3.wpfc_grid_title a {
 		position: relative;
 		left: auto;
 		top: auto;
+        width: auto;
+        height: auto;
 	}
 
 	.toggled-on .nav-menu li > ul a {
